// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styled-jss can handle components with nesting 1`] = `
<DocumentFragment>
  .div-1-0-1-1 {
    width: 100px;
    height: 100px;
    background-color: red;
  }
  .div-2-0-1-2 {
    width: 100px;
    height: 100px;
    background-color: blue;
  }

  <div>
    <div
      class="div-1-0-1-1"
    />
    <div>
      <div
        class="div-1-0-1-1"
      />
      <div
        class="div-2-0-1-2"
      />
      <div
        class="div-2-0-1-2"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`styled-jss can handle components with several styles 1`] = `
<DocumentFragment>
  .div-1-0-1-1 {
    width: 100px;
    height: 100px;
    background-color: red;
  }
  .div-2-0-1-2 {
    width: 100px;
    height: 100px;
    background-color: blue;
  }

  <div>
    <div
      class="div-1-0-1-1"
    />
    <div
      class="div-2-0-1-2"
    />
  </div>
</DocumentFragment>
`;

exports[`styled-jss can handle fragments 1`] = `
<DocumentFragment>
  .div-1-0-1-1 {
    width: 100px;
    height: 100px;
    background-color: red;
  }

  <div
    class="div-1-0-1-1"
  />
  .div-2-0-1-2 {
    width: 100px;
    height: 100px;
    background-color: blue;
  }

  <div
    class="div-2-0-1-2"
  />
</DocumentFragment>
`;

exports[`styled-jss removes non-deterministic class names 1`] = `
<DocumentFragment>
  .div-1-0-1-1 {
    width: 100px;
    height: 100px;
    background-color: red;
  }

  <div
    class="div-1-0-1-1"
  />
</DocumentFragment>
`;
